Fixit SecurityConfig AllowList with swagger