@@ -3,17 +3,20 @@ package com.huellapositiva.infrastructure.security;
 import com.huellapositiva.application.exception.InvalidJwtTokenException;
 import org.springframework.data.util.Pair;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 
 import javax.servlet.FilterChain;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -22,7 +25,14 @@ public class JwtAuthorizationFilter extends BasicAuthenticationFilter {
 
     private static final String ACCESS_TOKEN_PREFIX = "Bearer ";
 
-    private final List<String> nonAuthenticatedUrls = List.of("/actuator/health", "/api/v1/volunteers/register", "/api/v1/email-confirmation/", "/api/v1/refresh");
+    private final List<AntPathRequestMatcher> nonAuthenticatedUrls = Arrays.asList(
+            new AntPathRequestMatcher("/swagger-ui/**", HttpMethod.GET.name()),
+            new AntPathRequestMatcher("/v3/api-docs/**", HttpMethod.GET.name()),
+            new AntPathRequestMatcher("/actuator/health", HttpMethod.GET.name()),
+            new AntPathRequestMatcher("/api/v1/email-confirmation/", HttpMethod.GET.name()),
+            new AntPathRequestMatcher("/api/v1/volunteers/register", HttpMethod.POST.name()),
+            new AntPathRequestMatcher("/api/v1/refresh", HttpMethod.POST.name())
+    );
 
     private final JwtService jwtService;
 
@@ -35,7 +45,7 @@ public class JwtAuthorizationFilter extends BasicAuthenticationFilter {
     protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain) throws IOException, ServletException {
         String authHeader = req.getHeader(HttpHeaders.AUTHORIZATION);
         if (authHeader == null || !authHeader.startsWith(ACCESS_TOKEN_PREFIX)) {
-            if (nonAuthenticatedUrls.stream().anyMatch(url -> req.getRequestURI().startsWith(url))) {
+            if (nonAuthenticatedUrls.stream().anyMatch(matcher -> matcher.matches(req))) {
                 chain.doFilter(req, res);
             } else {
                 res.setHeader(HttpHeaders.WWW_AUTHENTICATE, "Bearer");
